# saas-genai-starter

./: .gitignore  BOOTSTRAP.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  bootstrap.config.json  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tech-steps.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  deploy.yml
apps/api/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
apps/api/migrations/: env.py
apps/api/migrations/versions/: 330264919ef5_organizations_and_memberships.py  5404219f916c_provider_key_columns.py  753b270b4c37_documents_and_chunks.py  a1b2c3d4e5f6_add_together_ai_provider.py  a29656a67a08_chat_messages.py  aa303f0035a5_citations_and_document_metadata.py  b2717bcdfa98_organization_billing_state.py  cadc131ed9f8_org_llm_settings.py  d1d9b546a616_conversations_skeleton.py  d87fb1b886f7_org_rate_limit_overrides.py  dcdf80628362_llm_usage.py  e15b328fd56f_invitations.py
apps/api/scripts/: export_openapi.py
apps/api/src/: all_models.py  main.py  worker.py
apps/api/src/core/: auth.py  config.py  crypto.py  db.py  email.py  errors.py  health.py  logging.py  queue.py  redis.py  repository.py  storage.py  telemetry.py  tenancy.py
apps/api/src/domains/admin/: router.py
apps/api/src/domains/billing/: router.py  schemas.py  service.py
apps/api/src/domains/chat/: agent.py  models.py  repository.py  router.py  schemas.py  service.py
apps/api/src/domains/documents/: ingestion.py  jobs.py  models.py  parsing.py  repository.py  retrieval.py  router.py  schemas.py
apps/api/src/domains/jobs/: router.py
apps/api/src/domains/llm_settings/: models.py  resolver.py  router.py  schemas.py  service.py
apps/api/src/domains/tenants/: models.py  repository.py  router.py  schemas.py  service.py
apps/api/src/domains/usage/: models.py  repository.py  router.py  schemas.py  service.py
apps/api/src/domains/users/: router.py
apps/api/src/llm/: anthropic_provider.py  catalog.py  cohere_provider.py  errors.py  factory.py  openai_provider.py  pricing.py  provider.py  rate_limit.py  resilience.py  types.py  voyage_provider.py
apps/api/tests/: conftest.py  jwt_utils.py  test_admin.py  test_auth.py  test_billing.py  test_chat.py  test_cors.py  test_documents.py  test_health.py  test_internal_jobs.py  test_invitations.py  test_llm_settings.py  test_rag.py  test_resolver.py  test_telemetry.py  test_tenancy.py  test_tenants.py  test_usage.py  test_worker_imports.py
apps/api/tests/llm/: fakes.py  test_anthropic_provider.py  test_compatible_providers.py  test_openai_provider.py  test_rate_limit.py  test_resilience.py  test_smoke.py
apps/web/: middleware.ts  package.json
apps/web/app/: globals.css  layout.tsx  opengraph-image.tsx  robots.ts  sitemap.ts
apps/web/components/: accept-invitation.tsx  api-status.tsx  app-sidebar.tsx  org-provider.tsx  org-switcher.tsx  page-placeholder.tsx  theme-toggle.tsx  user-menu.tsx
apps/web/lib/: auth.ts  org-store.ts
docs/: auth-flow.md  deploy.md  extending-llm-providers.md
evals/: dataset.yaml  runner.py
evals/fixtures/: coffee_brewing.md  remote_work_policy.md  solar_system.md
evals/results/: 5975066.json
scripts/: auth-schema.sql  bootstrap.py  init-db.sql
(+47 files in other folders)
