[project]
name = "api"
version = "0.1.0"
description = "saas-genai-starter API — FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "anthropic>=0.109.1",
    "arq>=0.25.0",
    "asyncpg>=0.31.0",
    "email-validator>=2.3.0",
    "fastapi>=0.136.3",
    "google-auth>=2.53.0",
    "google-cloud-storage>=3.11.0",
    "google-cloud-tasks>=2.22.0",
    "httpx>=0.28.1",
    "opentelemetry-exporter-otlp-proto-http>=1.42.1",
    "opentelemetry-instrumentation-fastapi>=0.63b1",
    "opentelemetry-instrumentation-httpx>=0.63b1",
    "opentelemetry-instrumentation-sqlalchemy>=0.63b1",
    "opentelemetry-sdk>=1.42.1",
    "pgvector>=0.4.2",
    "pydantic-settings>=2.14.1",
    "pyjwt[crypto]>=2.13.0",
    "pymupdf>=1.27.2.3",
    "python-multipart>=0.0.32",
    "redis>=8.0.0",
    "sqlalchemy[asyncio]>=2.0.50",
    "stripe>=15.2.0",
    "structlog>=26.1.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pyyaml>=6.0.3",
    "ruff>=0.15.17",
    "types-pyyaml>=6.0.12.20260518",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "S",   # bandit (security)
    "T20", # no print
    "RUF",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # assert is expected in tests

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["src"]

[[tool.mypy.overrides]]
# No stubs / partial typing in these third-party packages.
module = ["pgvector.*", "pymupdf", "google.cloud.*", "google.oauth2", "google.auth.*"]
ignore_missing_imports = true
follow_untyped_imports = true

[[tool.mypy.overrides]]
# pymupdf and pgvector expose untyped callables.
module = ["src.domains.documents.parsing", "src.domains.documents.models", "src.core.storage"]
disallow_untyped_calls = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv]
package = false
